# usf_econ_622_feature_engineering

./: .gitignore  README.md  data_exploration.ipynb  explore_nlp_features.ipynb  pyproject.toml  starter_notebook.ipynb
derived_data/: prices.csv  total_ratings_per_host.csv
